@@ -9,6 +9,8 @@ git-annex (10.20240130) UNRELEASED; urgency=medium
     already downloaded files when yt-dlp or a special remote was used.
   * addurl, importfeed: Added --raw-except option.
   * stack.yaml: Update to lts-22.9 and use crypton.
+  * assistant, undo: When committing, let the usual git commit
+    hooks run.
 
  -- Joey Hess <id@joeyh.name>  Mon, 29 Jan 2024 15:59:33 -0400
 
